tests/fixtures/errors/e0407_negate_bits.mimz
// expect: E0407
module M {
  in a: bits[8]
  out y: bits[9]
  y = -a
}
